bindings/c/whiteout_m2.h

typedef struct whiteout_M2WaterfallData whiteout_M2WaterfallData;
typedef struct whiteout_M2ParticleGeosetData whiteout_M2ParticleGeosetData;
typedef struct whiteout_M2EdgeFadeData whiteout_M2EdgeFadeData;
typedef struct whiteout_M2DistanceFadeData whiteout_M2DistanceFadeData;
typedef struct whiteout_M2DetailedLightData whiteout_M2DetailedLightData;
typedef struct whiteout_M2DebugOcclusionData whiteout_M2DebugOcclusionData;
typedef struct whiteout_M2TexturedLightData whiteout_M2TexturedLightData;
typedef struct whiteout_M2PivotDisplacementData whiteout_M2PivotDisplacementData;
typedef struct whiteout_M2PhysicsCollision whiteout_M2PhysicsCollision;
typedef struct whiteout_M2SkinSection whiteout_M2SkinSection;
typedef struct whiteout_M2Batch whiteout_M2Batch;
void whiteout_m2_M2WaterfallData_set_unknown3(whiteout_M2WaterfallData* self, float value);
float whiteout_m2_M2WaterfallData_get_unknown4(const whiteout_M2WaterfallData* self);
void whiteout_m2_M2WaterfallData_set_unknown4(whiteout_M2WaterfallData* self, float value);
/* ── M2ParticleGeosetData ─────────────────────────────────────────────── */

whiteout_M2ParticleGeosetData* whiteout_m2_M2ParticleGeosetData_new(void);
void whiteout_m2_M2ParticleGeosetData_delete(whiteout_M2ParticleGeosetData* self);
uint16_t whiteout_m2_M2ParticleGeosetData_get_geoset(const whiteout_M2ParticleGeosetData* self);
void whiteout_m2_M2ParticleGeosetData_set_geoset(whiteout_M2ParticleGeosetData* self, uint16_t value);
/* ── M2EdgeFadeData ─────────────────────────────────────────────── */

whiteout_M2EdgeFadeData* whiteout_m2_M2EdgeFadeData_new(void);
void whiteout_m2_M2EdgeFadeData_delete(whiteout_M2EdgeFadeData* self);
float whiteout_m2_M2EdgeFadeData_get_value8(const whiteout_M2EdgeFadeData* self);
void whiteout_m2_M2EdgeFadeData_set_value8(whiteout_M2EdgeFadeData* self, float value);
/* ── M2DistanceFadeData ─────────────────────────────────────────────── */

whiteout_M2DistanceFadeData* whiteout_m2_M2DistanceFadeData_new(void);
void whiteout_m2_M2DistanceFadeData_delete(whiteout_M2DistanceFadeData* self);
float whiteout_m2_M2DistanceFadeData_get_squaredFarDist(const whiteout_M2DistanceFadeData* self);
void whiteout_m2_M2DistanceFadeData_set_squaredFarDist(whiteout_M2DistanceFadeData* self, float value);
float whiteout_m2_M2DistanceFadeData_get_squaredNearDist(const whiteout_M2DistanceFadeData* self);
void whiteout_m2_M2DistanceFadeData_set_squaredNearDist(whiteout_M2DistanceFadeData* self, float value);
/* ── M2DetailedLightData ─────────────────────────────────────────────── */

whiteout_M2DetailedLightData* whiteout_m2_M2DetailedLightData_new(void);
void whiteout_m2_M2DetailedLightData_delete(whiteout_M2DetailedLightData* self);
uint16_t whiteout_m2_M2DetailedLightData_get_flags(const whiteout_M2DetailedLightData* self);
void whiteout_m2_M2DetailedLightData_set_flags(whiteout_M2DetailedLightData* self, uint16_t value);
uint16_t whiteout_m2_M2DetailedLightData_get_unknown0(const whiteout_M2DetailedLightData* self);
void whiteout_m2_M2DetailedLightData_set_unknown0(whiteout_M2DetailedLightData* self, uint16_t value);
uint32_t whiteout_m2_M2DetailedLightData_get_unknown1(const whiteout_M2DetailedLightData* self);
void whiteout_m2_M2DetailedLightData_set_unknown1(whiteout_M2DetailedLightData* self, uint32_t value);
/* ── M2DebugOcclusionData ─────────────────────────────────────────────── */

whiteout_M2DebugOcclusionData* whiteout_m2_M2DebugOcclusionData_new(void);
void whiteout_m2_M2DebugOcclusionData_delete(whiteout_M2DebugOcclusionData* self);
float whiteout_m2_M2DebugOcclusionData_get_unknown1_1(const whiteout_M2DebugOcclusionData* self);
void whiteout_m2_M2DebugOcclusionData_set_unknown1_1(whiteout_M2DebugOcclusionData* self, float value);
float whiteout_m2_M2DebugOcclusionData_get_unknown1_2(const whiteout_M2DebugOcclusionData* self);
void whiteout_m2_M2DebugOcclusionData_set_unknown1_2(whiteout_M2DebugOcclusionData* self, float value);
uint32_t whiteout_m2_M2DebugOcclusionData_get_unknown1_3(const whiteout_M2DebugOcclusionData* self);
void whiteout_m2_M2DebugOcclusionData_set_unknown1_3(whiteout_M2DebugOcclusionData* self, uint32_t value);
uint32_t whiteout_m2_M2DebugOcclusionData_get_unknown1_4(const whiteout_M2DebugOcclusionData* self);
void whiteout_m2_M2DebugOcclusionData_set_unknown1_4(whiteout_M2DebugOcclusionData* self, uint32_t value);
/* ── M2TexturedLightData ─────────────────────────────────────────────── */

whiteout_M2TexturedLightData* whiteout_m2_M2TexturedLightData_new(void);
void whiteout_m2_M2TexturedLightData_delete(whiteout_M2TexturedLightData* self);
float whiteout_m2_M2TexturedLightData_get_unknown0(const whiteout_M2TexturedLightData* self);
void whiteout_m2_M2TexturedLightData_set_unknown0(whiteout_M2TexturedLightData* self, float value);
float whiteout_m2_M2TexturedLightData_get_unknown1(const whiteout_M2TexturedLightData* self);
void whiteout_m2_M2TexturedLightData_set_unknown1(whiteout_M2TexturedLightData* self, float value);
int32_t whiteout_m2_M2TexturedLightData_get_textureLookup(const whiteout_M2TexturedLightData* self);
void whiteout_m2_M2TexturedLightData_set_textureLookup(whiteout_M2TexturedLightData* self, int32_t value);
int32_t whiteout_m2_M2TexturedLightData_get_unknown2(const whiteout_M2TexturedLightData* self);
void whiteout_m2_M2TexturedLightData_set_unknown2(whiteout_M2TexturedLightData* self, int32_t value);
/* ── M2PivotDisplacementData ─────────────────────────────────────────────── */

/* One DPIV (pivot displacement) record, 32 bytes. */
/*  */
/* The client keeps the payload pointer and a record count of `chunkSize / 32`, so a chunk holds N of these — the corpus has both 1- and 2-record chunks. */
whiteout_M2PivotDisplacementData* whiteout_m2_M2PivotDisplacementData_new(void);
void whiteout_m2_M2PivotDisplacementData_delete(whiteout_M2PivotDisplacementData* self);
/* small displacement; Z varies most */
whiteout_Vector3f* whiteout_m2_M2PivotDisplacementData_get_offset(whiteout_M2PivotDisplacementData* self);
void whiteout_m2_M2PivotDisplacementData_set_offset(whiteout_M2PivotDisplacementData* self, const whiteout_Vector3f* value);
/* 0 or 1 */
uint32_t whiteout_m2_M2PivotDisplacementData_get_flags(const whiteout_M2PivotDisplacementData* self);
void whiteout_m2_M2PivotDisplacementData_set_flags(whiteout_M2PivotDisplacementData* self, uint32_t value);
/* ── M2PhysicsCollision ─────────────────────────────────────────────── */

whiteout_M2PhysicsCollision* whiteout_m2_M2PhysicsCollision_new(void);
void whiteout_m2_M2PhysicsCollision_delete(whiteout_M2PhysicsCollision* self);
size_t whiteout_m2_M2PhysicsCollision_get_vertexPositions_count(const whiteout_M2PhysicsCollision* self);
const float* whiteout_m2_M2PhysicsCollision_get_vertexPositions_data(const whiteout_M2PhysicsCollision* self);
size_t whiteout_m2_M2PhysicsCollision_get_faceNormals_count(const whiteout_M2PhysicsCollision* self);
const float* whiteout_m2_M2PhysicsCollision_get_faceNormals_data(const whiteout_M2PhysicsCollision* self);
/* ── M2SkinSection ─────────────────────────────────────────────── */

whiteout_M2SkinSection* whiteout_m2_M2SkinSection_new(void);
void whiteout_m2_M2SkinSection_delete(whiteout_M2SkinSection* self);
uint16_t whiteout_m2_M2SkinSection_get_skinSectionId(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_skinSectionId(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_level(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_level(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_vertexStart(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_vertexStart(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_vertexCount(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_vertexCount(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_indexStart(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_indexStart(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_indexCount(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_indexCount(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_boneCount(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_boneCount(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_boneComboIndex(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_boneComboIndex(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_boneInfluences(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_boneInfluences(whiteout_M2SkinSection* self, uint16_t value);
uint16_t whiteout_m2_M2SkinSection_get_centerBoneIndex(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_centerBoneIndex(whiteout_M2SkinSection* self, uint16_t value);
whiteout_Vector3f* whiteout_m2_M2SkinSection_get_centerPosition(whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_centerPosition(whiteout_M2SkinSection* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2SkinSection_get_sortCenterPosition(whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_sortCenterPosition(whiteout_M2SkinSection* self, const whiteout_Vector3f* value);
float whiteout_m2_M2SkinSection_get_sortRadius(const whiteout_M2SkinSection* self);
void whiteout_m2_M2SkinSection_set_sortRadius(whiteout_M2SkinSection* self, float value);
/* ── M2Batch ─────────────────────────────────────────────── */

whiteout_M2Batch* whiteout_m2_M2Batch_new(void);
void whiteout_m2_M2Batch_delete(whiteout_M2Batch* self);