bindings/csharp/Whiteout/M2/NativeMethods.M2.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_unknown3(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2WaterfallData_get_unknown4(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2WaterfallData_set_unknown4(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ParticleGeosetData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleGeosetData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ParticleGeosetData_get_geoset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleGeosetData_set_geoset(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2EdgeFadeData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2EdgeFadeData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2EdgeFadeData_get_value8(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2EdgeFadeData_set_value8(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2DistanceFadeData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DistanceFadeData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2DistanceFadeData_get_squaredFarDist(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DistanceFadeData_set_squaredFarDist(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2DistanceFadeData_get_squaredNearDist(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DistanceFadeData_set_squaredNearDist(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2DetailedLightData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DetailedLightData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2DetailedLightData_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DetailedLightData_set_flags(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2DetailedLightData_get_unknown0(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DetailedLightData_set_unknown0(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2DetailedLightData_get_unknown1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DetailedLightData_set_unknown1(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2DebugOcclusionData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DebugOcclusionData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2DebugOcclusionData_get_unknown1_1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DebugOcclusionData_set_unknown1_1(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2DebugOcclusionData_get_unknown1_2(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DebugOcclusionData_set_unknown1_2(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2DebugOcclusionData_get_unknown1_3(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DebugOcclusionData_set_unknown1_3(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2DebugOcclusionData_get_unknown1_4(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DebugOcclusionData_set_unknown1_4(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2TexturedLightData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2TexturedLightData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2TexturedLightData_get_unknown0(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2TexturedLightData_set_unknown0(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2TexturedLightData_get_unknown1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2TexturedLightData_set_unknown1(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2TexturedLightData_get_textureLookup(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2TexturedLightData_set_textureLookup(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2TexturedLightData_get_unknown2(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2TexturedLightData_set_unknown2(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PivotDisplacementData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PivotDisplacementData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PivotDisplacementData_get_offset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PivotDisplacementData_set_offset(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PivotDisplacementData_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PivotDisplacementData_set_flags(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsCollision_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsCollision_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsCollision_get_vertexPositions_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsCollision_get_vertexPositions_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsCollision_get_faceNormals_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsCollision_get_faceNormals_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SkinSection_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_skinSectionId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_skinSectionId(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_level(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_level(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_vertexStart(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_vertexStart(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_vertexCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_vertexCount(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_indexStart(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_indexStart(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_indexCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_indexCount(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_boneCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_boneCount(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_boneComboIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_boneComboIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_boneInfluences(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_boneInfluences(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2SkinSection_get_centerBoneIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_centerBoneIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SkinSection_get_centerPosition(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_centerPosition(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SkinSection_get_sortCenterPosition(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_sortCenterPosition(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2SkinSection_get_sortRadius(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinSection_set_sortRadius(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Batch_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_delete(IntPtr self);
